--- a/conda.yaml
+++ b/conda.yaml
@@ -1,4 +1,4 @@
-name: tuto11
+name: tut
 channels:
   - conda-forge
 dependencies:
@@ -9,3 +9,4 @@ dependencies:
     - mlflow>=1.0
     - boto3
     - pandas
+    - numpy
